# fastapi-cookiecutter

./: .gitignore  .travis.yml  Makefile  README.md  cookiecutter.json  jinja2_extensions.py  requirements.txt
{{ cookiecutter.project_slug }}/: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  local.Dockerfile  main.py  pyproject.toml
{{ cookiecutter.project_slug }}/.devcontainer/: devcontainer.json  docker-compose.yml
{{ cookiecutter.project_slug }}/.helm/: .sops.yaml  Chart.yaml  secrets.yaml  values.yaml
{{ cookiecutter.project_slug }}/.helm/templates/: _helpers.tpl  _postgresql.tpl  migrations-job.yaml
{{ cookiecutter.project_slug }}/.helm/templates/api/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
{{ cookiecutter.project_slug }}/.helm/templates/config/: external-db-secret.yaml  pull-secret.yaml
{{ cookiecutter.project_slug }}/migrations/: env.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: config.py  protocol.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/app/healthcheck/: controllers.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/db/: __init__.py  base.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/models/: __init__.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/tests/: conftest.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/tests/test_migrations/: test_stairway.py
(+4 files in other folders)
