[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "{{ cookiecutter.project_slug }}"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.95.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
alembic = "^1.9.1"
pytest = "^7.2.0"
pytest-asyncio = "^0.21.0"
uvicorn = {extras = ["standart"], version = "^0.21.1"}
python-multipart = "^0.0.6"
orjson = "^3.8.4"
asyncpg = "^0.27.0"
greenlet = "^2.0.1"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
python-dateutil = "^2.8.2"
psycopg2 = "^2.9.5"
httpx = "^0.24.1"
freezegun = "^1.2.2"
pytest-mock = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
rope = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
